# random-code-xyz

./: .editorconfig  .env  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  NEXT_STEPS.md  README.md  alerts.yml  api.py  config.py  docker-compose.yml  fetch_videos.py  find_testable_videos.py  main.py  market_data.py  market_data_service.py  monitor_cycles.sh  process_log.txt  prometheus.yml  pyproject.toml  pytest.ini  quick_dual_cycle_test.py  requirements.txt  run.py  run.sh  run_cycle.py  run_cycle_impl.py  run_cycle_modification.txt  run_dual_cycle_test.py  run_dual_cycle_test.sh  run_test_quick_dual_cycle.sh  run_tests.py  sentiment_service.py  start_api.sh  start_simulation.sh  testTradeService.py  test_api.py  test_direct.py  test_dual_cycle.py  (+9 more)
.github/workflows/: ci-cd.yml
config/: __init__.py  settings.py
data/: portfolio.json
docs/: ACCOMPLISHMENTS.md  FIXES.md  NEXT_STEPS.md  README.md
models/: __init__.py  video.py
scripts/: prepare_simulation.sh
services/: __init__.py  app_service.py  crypto_trading_service.py  market_data_service.py  sentiment_service.py  trade_service.py  transcript_service.py
tests/: test_api_endpoints.py  test_comprehensive_cycle.py  test_dual_cycle.py  test_dual_cycle_integration.py  test_initialization.py  test_integration.py  test_langroid.py  test_langroid_openrouter.py  test_process_video_stats.py  test_quick_decision.py  test_quick_dual_cycle.py  test_run_cycle.py  test_sentiment.py  test_trade_execution.py  test_transcript_audio.py  test_transcript_service.py  test_transcripts.py
utils/: __init__.py  cache_manager.py  openrouter_utils.py
(+13 files in other folders)
